Entrega Final js finalizados

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <button id="botonBorrar" class="botonesIndex">Eliminar Credito</button>
         <button id="botonFiltrar" class="botonesIndex">Filtrar Credito</button>
         <button id="mostrarArreglo"class="botonesIndex">Mostrar Creditos</button>
-        <button id="mostrarArregloRapi"class="botonesIndex">Mostrar Creditos RapiCuotas</button>
+        <button id="mostrarArregloFin"class="botonesIndex">Mostrar Creditos Finalizados</button>
     </div>
     <div id="eventos" class="eventosCss">
     </div>
